--- a/Resources/Private/Templates/Shop/Cart.html
+++ b/Resources/Private/Templates/Shop/Cart.html
@@ -5,126 +5,205 @@
 
 <f:section name="main">
     <f:render partial="FlashMessages" />
+    <f:render partial="ValidationResults" />
+    <f:render partial="ShopNavigation" />
 
-    <div class="frame-layout-100 text-right">
-        <div class="grid">
-            <div class="col-6 text-left">
-                <f:link.action action="list"
-                               controller="Shop">
-                    Zurück zum Shop
-                </f:link.action>
-            </div>
-            <div class="col-6 text-right">
-                <f:link.action action="clearCart"
-                               controller="Shop">
-                    Warenkorb leeren
-                </f:link.action>
-            </div>
-        </div>
-    </div>
+    <f:if condition="{cart.products}">
+        <f:then>
+            <f:form action="checkout" object="{cart}" name="cart" method="post" enctype="multipart/form-data">
+                <f:render section="renderProductTable" arguments="{_all}" />
+                <f:render section="renderMemberForm" arguments="{_all}" />
+                <button type="submit" class="btn btn-primary">
+                    <f:translate key="orderWithCosts" />
+                </button>
+            </f:form>
+        </f:then>
+        <f:else>
+            <f:translate key="noProducts" />
+        </f:else>
+    </f:if>
+</f:section>
 
-    <f:form action="checkout" object="{cart}" name="cart" method="post" enctype="multipart/form-data">
-        <table>
+<f:section name="renderProductTable">
+    <table>
+        <f:for each="{cart.products}" as="product" iteration="productIterator">
             <thead>
             <tr>
-                <th>Aktion</th>
-                <th>Titel</th>
-                <th colspan="2">Variante</th>
+                <th><f:translate key="title" /></th>
+                <th><f:translate key="color" /></th>
+                <th><f:translate key="size" /></th>
+                <th><f:translate key="lettering" /></th>
+                <th>&nbsp;</th>
             </tr>
             </thead>
             <tbody>
-            <f:for each="{cart.products}" as="product" iteration="productIterator">
-                <f:form.hidden property="products.{productIterator.index}.realProduct.title"
-                               value="{product.realProduct.title}" />
-                <tr>
-                    <td>
-                        <f:link.action action="cart"
-                                       class="addSubToCart"
-                                       data="{host: host, product-uid: product.uid, variant-uid: variant.uid, method: 'addToCart', reload: 1}">Weiteres Exemplar</f:link.action>
-                    </td>
-                    <td>{product.title}</td>
-                    <td colspan="2">
-                        <table>
-                            <thead>
-                            <tr>
-                                <th>Title</th>
-                                <th>Farbe</th>
-                                <th>Größe</th>
-                                <th>Schriftzug</th>
-                                <th>Preis</th>
-                                <th>Aktion</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <f:for each="{product.variants}" as="variant" iteration="variantIterator">
-                                <f:form.hidden property="products.{productIterator.index}.variants.{variantIterator.index}.realVariant.title"
-                                               value="{variant.realVariant.title}" />
-                                <tr>
-                                    <td>{variant.realVariant.title}</td>
-                                    <td>
-                                        <f:if condition="{variant.realVariant.color -> f:count()}">
-                                            <f:render section="renderTextOrSelect"
-                                                      arguments="{options: variant.realVariant.color, variant: variant.realVariant, product: product.realProduct, productIterator: productIterator, variantIterator: variantIterator, label: 'Farbe', name: 'selectedColor'}" />
-                                        </f:if>
-                                    </td>
-                                    <td>
-                                        <f:if condition="{variant.realVariant.sizes -> f:count()}">
-                                            <f:render section="renderTextOrSelect"
-                                                      arguments="{options: variant.realVariant.sizes, variant: variant.realVariant, product: product.realProduct, productIterator: productIterator, variantIterator: variantIterator, label: 'Größe', name: 'selectedSize'}" />
-                                        </f:if>
-                                    </td>
-                                    <td>
-                                        <f:if condition="{variant.realVariant.hasLettering}">
-                                            <f:form.textfield property="products.{uid}.lettering" />
-                                        </f:if>
-                                    </td>
-                                    <td>
-                                        <f:render partial="General" section="renderPrice" arguments="{price: variant.realVariant.price}" />
-                                    </td>
-                                    <td>
-                                        <f:link.action action="cart"
-                                                       class="addSubToCart"
-                                                       data="{host: host, product-uid: uid, variant-uid: variant.uid, position: position, method: 'removeFromCart', reload: 1}">Entfernen</f:link.action>
-
-                                    </td>
-                                </tr>
-                            </f:for>
-                            </tbody>
-                        </table>
-                    </td>
-                </tr>
-            </f:for>
+            <f:form.hidden property="products.{productIterator.index}.realProduct.title"
+                           value="{product.realProduct.title}" />
+            <f:if condition="{product.variants}">
+                <f:then>
+                    <f:variable name="amountOfVariants">{product.variants -> f:count()}</f:variable>
+                    <f:for each="{product.variants}" as="variant" iteration="variantIterator">
+                        <tr>
+                            <f:if condition="{variantIterator.isFirst}">
+                                <td rowspan="{amountOfVariants + 2}">
+                                    <f:render section="renderTitleColumn" arguments="{_all}" />
+                                </td>
+                            </f:if>
+                            <td>
+                                <f:if condition="{variant.realVariant.color -> f:count()}">
+                                    <f:render section="renderTextOrSelect"
+                                              arguments="{options: variant.realVariant.color, variant: variant.realVariant, product: product.realProduct, productIterator: productIterator, variantIterator: variantIterator, label: 'Farbe', name: 'selectedColor'}" />
+                                </f:if>
+                            </td>
+                            <td>
+                                <f:if condition="{variant.realVariant.sizes -> f:count()}">
+                                    <f:render section="renderTextOrSelect"
+                                              arguments="{options: variant.realVariant.sizes, variant: variant.realVariant, product: product.realProduct, productIterator: productIterator, variantIterator: variantIterator, label: 'Größe', name: 'selectedSize'}" />
+                                </f:if>
+                            </td>
+                            <td>
+                                <f:if condition="{variant.realVariant.hasLettering}">
+                                    <f:form.textfield property="products.{productIterator.index}.variants.{variantIterator.index}.selectedLettering" />
+                                </f:if>
+                            </td>
+                            <td>
+                                <f:render section="renderRemoveLink" arguments="{_all}" />
+                            </td>
+                        </tr>
+                    </f:for>
+                </f:then>
+                <f:else>
+                    <tr>
+                        <td rowspan="3">
+                            <f:render section="renderTitleColumn" arguments="{_all}" />
+                        </td>
+                        <td colspan="4">&nbsp;</td>
+                    </tr>
+                </f:else>
+            </f:if>
             <tr>
-                <td colspan="2">&nbsp;</td>
-                <td><strong>Summe:</strong></td>
-                <td>
-                    <strong>
-                        <f:render partial="General" section="renderPrice" arguments="{price: cart.priceTotal}" />
-                    </strong>
-                </td>
+                <td>&nbsp;</td>
+                <td><f:translate key="amount" /></td>
+                <td><f:translate key="priceSingle" /></td>
+                <td><f:translate key="priceTotal" /></td>
+            </tr>
+            <tr>
+                <td>&nbsp;</td>
+                <td>{product.amount}</td>
+                <td><f:render partial="General" section="renderPrice" arguments="{price: product.price}" /></td>
+                <td><f:render partial="General" section="renderPrice" arguments="{price: product.priceTotal}" /></td>
             </tr>
             </tbody>
-        </table>
+        </f:for>
+        <tr>
+            <td colspan="3">&nbsp;</td>
+            <td><strong><f:translate key="sum" />:</strong></td>
+            <td>
+                <strong>
+                    <f:render partial="General" section="renderPrice" arguments="{price: cart.priceTotal}" />
+                </strong>
+            </td>
+        </tr>
+    </table>
+</f:section>
 
-        <dl>
-            <dt><label>Mitgliedsnummer</label></dt>
-            <dd><f:form.textfield property="memberId" /></dd>
-            <dt><label>Vorname</label></dt>
-            <dd><f:form.textfield property="firstName" /></dd>
-            <dt><label>Nachname</label></dt>
-            <dd><f:form.textfield property="lastName" /></dd>
-            <dt><label>Email</label></dt>
-            <dd><f:form.textfield property="email" /></dd>
-            <dt><label>Straße + Hs-Nr</label></dt>
-            <dd><f:form.textfield property="address" /></dd>
-            <dt><label>PLZ</label></dt>
-            <dd><f:form.textfield property="zip" /></dd>
-            <dt><label>Ort</label></dt>
-            <dd><f:form.textfield property="city" /></dd>
-        </dl>
+<f:section name="renderTitleColumn">
+    <p>{product.title}</p>
+    <p>
+        <f:if condition="{product.variants}">
+            <f:then>
+                <f:link.action action="cart"
+                               class="addSubToCart"
+                               data="{host: host, product-uid: product.realProduct.uid, variant-uid: variant.realVariant.uid, method: 'addToCart', reload: 1}">
+                    <f:translate key="addToCart" />
+                </f:link.action>
+            </f:then>
+            <f:else>
+                <f:link.action action="cart"
+                               class="addSubToCart"
+                               data="{host: host, product-uid: product.realProduct.uid, method: 'addToCart', reload: 1}">
+                    <f:translate key="addToCart" />
+                </f:link.action><br>
+                <f:render section="renderRemoveLink" arguments="{_all}" />
+            </f:else>
+        </f:if>
+    </p>
+</f:section>
 
-        <button type="submit" class="btn btn-primary">Kostenpflichtig bestellen</button>
-    </f:form>
+<f:section name="renderRemoveLink">
+    <f:if condition="{product.variants}">
+        <f:then>
+            <f:link.action action="cart"
+                           class="addSubToCart"
+                           data="{host: host, product-uid: product.realProduct.uid, variant-uid: variant.realVariant.uid, method: 'removeFromCart', reload: 1}">
+                <f:translate key="removeFromCart" />
+            </f:link.action>
+        </f:then>
+        <f:else>
+            <f:link.action action="cart"
+                           class="addSubToCart"
+                           data="{host: host, product-uid: product.realProduct.uid, method: 'removeFromCart', reload: 1}">
+                <f:translate key="removeFromCart" />
+            </f:link.action>
+        </f:else>
+    </f:if>
+</f:section>
+
+<f:section name="renderVariantFormFields">
+    <table>
+        <thead>
+        <tr>
+            <th><f:translate key="color" /></th>
+            <th><f:translate key="size" /></th>
+            <th><f:translate key="lettering" /></th>
+        </tr>
+        </thead>
+        <tbody>
+        <f:for each="{product.variants}" as="variant" iteration="variantIterator">
+            <tr>
+                <td>
+                    <f:if condition="{variant.realVariant.color -> f:count()}">
+                        <f:render section="renderTextOrSelect"
+                                  arguments="{options: variant.realVariant.color, variant: variant.realVariant, product: product.realProduct, productIterator: productIterator, variantIterator: variantIterator, label: 'Farbe', name: 'selectedColor'}" />
+                    </f:if>
+                </td>
+                <td>
+                    <f:if condition="{variant.realVariant.sizes -> f:count()}">
+                        <f:render section="renderTextOrSelect"
+                                  arguments="{options: variant.realVariant.sizes, variant: variant.realVariant, product: product.realProduct, productIterator: productIterator, variantIterator: variantIterator, label: 'Größe', name: 'selectedSize'}" />
+                    </f:if>
+                </td>
+                <td>
+                    <f:if condition="{variant.realVariant.hasLettering}">
+                        <f:form.textfield property="products.{productIterator.index}.variants.{variantIterator.index}.selectedLettering" />
+                    </f:if>
+                </td>
+            </tr>
+        </f:for>
+        </tbody>
+    </table>
+</f:section>
+
+<f:section name="renderMemberForm">
+    <dl>
+        <dt><label><f:translate key="memberId" /></label></dt>
+        <dd>
+            <f:form.textfield property="memberId" /><br>
+            <small><f:translate key="memberIdDescription" /></small>
+        </dd>
+        <dt><label><f:translate key="firstName" /></label></dt>
+        <dd><f:form.textfield property="firstName" /></dd>
+        <dt><label><f:translate key="lastName" /></label></dt>
+        <dd><f:form.textfield property="lastName" /></dd>
+        <dt><label><f:translate key="address" /></label></dt>
+        <dd><f:form.textfield property="address" /></dd>
+        <dt><label><f:translate key="zip" /></label></dt>
+        <dd><f:form.textfield property="zip" /></dd>
+        <dt><label><f:translate key="city" /></label></dt>
+        <dd><f:form.textfield property="city" /></dd>
+        <dt><label><f:translate key="email" /></label></dt>
+        <dd><f:form.textfield property="email" /></dd>
+    </dl>
 </f:section>
 
 <f:section name="renderTextOrSelect">
@@ -132,6 +211,8 @@
         <f:then>
             <f:for each="{options}" as="option" iteration="iterator">
                 <f:if condition="iterator.isFirst">
+                    <f:form.hidden property="products.{productIterator.index}.variants.{variantIterator.index}.{name}"
+                                   value="{option.uid}" />
                     {option.title}
                 </f:if>
             </f:for>
