--- a/Resources/Private/Templates/Shop/Checkout.html
+++ b/Resources/Private/Templates/Shop/Checkout.html
@@ -4,5 +4,97 @@
 <f:layout name="Default" />
 
 <f:section name="main">
-    <h2>Ich tue mal so, als wenn etwas bestellt worden wäre ;-)</h2>
+    <h2><f:translate key="memberData" /></h2>
+
+    <table>
+        <tbody>
+        <tr>
+            <td><f:translate key="memberId" /></td>
+            <td>{cart.memberId}</td>
+        </tr>
+        <tr>
+            <td><f:translate key="firstName" /></td>
+            <td>{cart.firstName}</td>
+        </tr>
+        <tr>
+            <td><f:translate key="lastName" /></td>
+            <td>{cart.lastName}</td>
+        </tr>
+        <tr>
+            <td><f:translate key="address" /></td>
+            <td>{cart.address}</td>
+        </tr>
+        <tr>
+            <td><f:translate key="zip" /></td>
+            <td>{cart.zip}</td>
+        </tr>
+        <tr>
+            <td><f:translate key="city" /></td>
+            <td>{cart.city}</td>
+        </tr>
+        <tr>
+            <td><f:translate key="email" /></td>
+            <td>{cart.email}</td>
+        </tr>
+        <tr>
+            <td><f:translate key="orderDate" /></td>
+            <td><f:format.date format="d.m.Y H:i:s">now</f:format.date></td>
+        </tr>
+        </tbody>
+    </table>
+
+    <h2><f:translate key="productOrder" /></h2>
+
+    <table>
+        <thead>
+        <tr>
+            <th><f:translate key="title" /></th>
+            <th><f:translate key="articleNumber" /></th>
+            <th colspan="2">Variante</th>
+        </tr>
+        </thead>
+        <tbody>
+        <f:for each="{cart.products}" as="product" iteration="productIterator">
+            <tr>
+                <td>{product.realProduct.title}</td>
+                <td>{product.realProduct.articleNumber}</td>
+                <td colspan="2">
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Farbe</th>
+                            <th>Größe</th>
+                            <th>Schriftzug</th>
+                            <th>Preis</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <f:for each="{product.variants}" as="variant" iteration="variantIterator">
+                            <tr>
+                                <td>{variant.realVariant.title}</td>
+                                <td>{variant.selectedColor.title}</td>
+                                <td>{variant.selectedSize.title}</td>
+                                <td>{variant.selectedLettering}</td>
+                                <td>
+                                    <f:render partial="General" section="renderPrice" arguments="{price: variant.realVariant.price}" />
+                                </td>
+                            </tr>
+                        </f:for>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+        </f:for>
+        <tr>
+            <td colspan="2">&nbsp;</td>
+            <td><strong>Summe:</strong></td>
+            <td>
+                <strong>
+                    <f:render partial="General" section="renderPrice" arguments="{price: cart.priceTotal}" />
+                </strong>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </f:section>
