Add color and size to allVariants

--- a/Resources/Private/Templates/Shop/Checkout.html
+++ b/Resources/Private/Templates/Shop/Checkout.html
@@ -109,5 +109,15 @@
                 </strong>
             </td>
         </tr>
+        <tr>
+            <td colspan="2">&nbsp;</td>
+            <td><strong><f:translate key="shipping" />:</strong></td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td colspan="2">&nbsp;</td>
+            <td><strong><f:translate key="total" />:</strong></td>
+            <td>&nbsp;</td>
+        </tr>
     </table>
 </f:section>
