--- a/Resources/Private/Templates/Shop/List.html
+++ b/Resources/Private/Templates/Shop/List.html
@@ -26,7 +26,7 @@
     </div>
 
     <f:widget.paginate objects="{products}" as="paginatedProducts">
-        <f:render partial="ListProducts" arguments="{products: paginatedProducts}"/>
+        <f:render partial="ListProducts" arguments="{pageId: pageId, host: host, products: paginatedProducts}"/>
     </f:widget.paginate>
 
     <div class="frame-layout-100 text-right">
